chore: update eodash and dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "vue.server.includeLanguages": ["vue", "markdown"]
+  "vue.server.includeLanguages": ["vue", "markdown"],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
