--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
-    "@eodash/eodash": "^5.1.0",
-    "@eox/storytelling": "^1.9.0"
+    "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@e91ea17",
+    "@eox/storytelling": "^1.9.4"
   },
   "devDependencies": {
     "@eox/pages-theme-eox": "^0.10.1",
-    "eslint-plugin-vue": "^10.3.0",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^3.0.3"
+    "eslint-plugin-vue": "^10.5.0",
+    "typescript": "^5.9.2",
+    "vue-tsc": "^3.0.7"
   },
   "scripts": {
     "dev": "vitepress dev",
