--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
     "build": "vitepress build",
     "serve": "vitepress serve",
     "format": "npx prettier --write **/*.{js,css,vue}"
+  },
+  "dependencies": {
+    "@eox/chart": "^1.0.1",
+    "@eox/itemfilter": "^1.10.4",
+    "@eox/jsonform": "^1.4.1",
+    "@eox/layercontrol": "^1.1.3",
+    "@eox/layout": "^1.0.0",
+    "@eox/map": "^1.26.0",
+    "@eox/storytelling": "^1.9.4"
   }
 }
