--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@eox/chart": "^1.0.1",
-    "@eox/itemfilter": "^1.10.4",
-    "@eox/jsonform": "^1.4.1",
+    "@eox/elements-utils": "^1.1.0",
+    "@eox/itemfilter": "^1.11.0",
+    "@eox/jsonform": "^1.4.2",
     "@eox/layercontrol": "^1.1.3",
     "@eox/layout": "^1.0.0",
     "@eox/map": "^1.26.0",
-    "@eox/storytelling": "^1.9.4"
+    "@eox/storytelling": "^1.9.5"
   }
 }
