--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "check": "vue-tsc --noEmit --skipLibCheck && eslint ."
   },
   "dependencies": {
-    "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@2524ae5",
+    "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@243",
     "@eox/chart": "^1.0.1",
     "@eox/elements-utils": "^1.1.0",
-    "@eox/itemfilter": "^1.11.0",
+    "@eox/itemfilter": "^1.12.0",
     "@eox/jsonform": "^1.4.2",
     "@eox/layercontrol": "^1.1.3",
     "@eox/layout": "^1.0.0",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@eox/pages-theme-eox": "^0.10.1",
     "eslint-plugin-vue": "^10.5.0",
-    "typescript": "^5.9.2",
-    "vue-tsc": "^3.0.7"
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.0"
   }
 }
