--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "build": "vitepress build",
     "serve": "vitepress serve",
     "format": "npx prettier --write **/*.{js,css,json}",
-    "check": "vue-tsc --noEmit --skipLibCheck && eslint ."
+    "check": "vue-tsc && eslint ."
   },
   "dependencies": {
     "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@0a7ffe2",
     "@eox/chart": "^1.0.1",
     "@eox/elements-utils": "^1.1.0",
-    "@eox/itemfilter": "^1.12.0",
-    "@eox/jsonform": "^1.4.2",
+    "@eox/itemfilter": "^1.13.0",
+    "@eox/jsonform": "^1.5.0",
     "@eox/layercontrol": "1.2.2-dev.1760104411.0",
     "@eox/layout": "^1.0.0",
-    "@eox/map": "^1.26.0",
-    "@eox/storytelling": "^1.9.5"
+    "@eox/map": "^1.26.3",
+    "@eox/storytelling": "^1.9.8"
   },
   "devDependencies": {
-    "@eox/pages-theme-eox": "^0.10.1",
-    "eslint-plugin-vue": "^10.5.0",
+    "@eox/pages-theme-eox": "^0.11.1",
+    "eslint-plugin-vue": "^10.6.2",
     "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.1"
+    "vue-tsc": "^3.1.5"
   }
 }
