--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@eox/layout": "^1.0.0",
     "@eox/map": "^1.26.3",
     "@eox/storytelling": "^1.9.8",
-    "ol": "10.7.1-dev.1766845662703",
+    "chroma-js": "^3.2.0",
+    "ol": "dev",
     "stac-js": "^0.1.2",
     "zarrita": "^0.5.4"
   },
