--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@0a7ffe2",
-    "@eox/chart": "^1.0.1",
+    "@eox/chart": "^1.1.0",
     "@eox/elements-utils": "^1.1.0",
-    "@eox/itemfilter": "^1.13.0",
-    "@eox/jsonform": "^1.5.0",
-    "@eox/layercontrol": "1.2.2-dev.1760104411.0",
+    "@eox/itemfilter": "^1.13.3",
+    "@eox/jsonform": "^1.8.0",
+    "@eox/layercontrol": "^1.3.2",
     "@eox/layout": "^1.0.0",
-    "@eox/map": "^1.26.3",
+    "@eox/map": "^2.0.2",
     "@eox/storytelling": "^1.9.8"
   },
   "devDependencies": {
