Feat: OpenLayers & Titiler integration examples (#30) + (#31)
* Refactor code structure for improved readability and maintainability

* Add OpenLayers integration examples for contrast stretching, false color, NDVI, and true color visualization

- Implemented interactive contrast stretching using WebGL and GeoZarr in `contrast.md`
- Created false color infrared visualization for vegetation analysis in `false-color.md`
- Developed NDVI calculation example for real-time vegetation index assessment in `ndvi.md`
- Added true color rendering with gamma correction and interpolation in `true-color.md`
- Each example includes live demos, code snippets, and explanations of the underlying concepts and applications.

* refactor: remove copy code button and update syntax highlighting styles

* refactor: update navigation and improve styling for OpenLayers integration examples

* docs: add code implementation section for OpenLayers false color infrared example

* refactor: update NDVI calculation and enhance visualization with linear color scale

* updated package lock

* Update OpenLayers integration examples and dependencies

- Adjusted the layout of the OpenLayers basic map setup to float the logo to the right.
- Removed WebGL support messages from the basic map setup.
- Updated package.json to include chroma-js and change ol dependency to dev.
- Removed the false color example file as it is no longer needed.
- Updated NDVI example to include interactive controls for NDVI visualization.
- Enhanced NDVI calculation with dynamic color scaling using chroma-js.
- Updated navigation links and counts across examples for consistency.
- Updated package-lock.json and pnpm-lock.yaml to reflect new dependencies.

* fix: correct example numbering for NDVI Calculation and Interactive Contrast

* fix: update OpenLayers version and add chroma-js dependency

* fix: update NDVI bands and remove WebGL support message in contrast example

* feat: update OpenLayers integration examples to includ

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@eox/layercontrol": "^1.3.2",
     "@eox/layout": "^1.0.0",
     "@eox/map": "^2.0.2",
-    "@eox/storytelling": "^1.10.0"
+    "@eox/storytelling": "^1.10.0",
+    "chroma-js": "^3.2.0",
+    "ol": "10.7.1-dev.1767511985622",
+    "stac-js": "^0.1.2",
+    "zarrita": "^0.5.4"
   },
   "devDependencies": {
     "@eox/pages-theme-eox": "^0.11.5",
