--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@eox/jsonform": "^1.8.0",
     "@eox/layercontrol": "^1.3.2",
     "@eox/layout": "^1.0.0",
-    "@eox/map": "^2.0.2",
+    "@eox/map": "^2.1.0-dev.1",
     "@eox/storytelling": "^1.10.0",
     "chroma-js": "^3.2.0",
     "ol": "10.7.1-dev.1767511985622",
