--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --force
       - name: Build with VitePress with correct base
         run: npm run build -- --base /pr-preview/pr-${{ github.event.number }}/
       - name: Deploy preview to Github Pages
