--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@b73dc67",
     "@eox/chart": "^1.1.0",
     "@eox/elements-utils": "^1.1.0",
-    "@eox/itemfilter": "^1.13.3",
+    "@eox/itemfilter": "https://pkg.pr.new/EOX-A/EOxElements/@eox/itemfilter@a917307",
     "@eox/jsonform": "^1.8.0",
     "@eox/layercontrol": "^1.3.2",
     "@eox/layout": "^1.0.0",
