--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
     "lib": ["esnext", "dom", "DOM.Iterable"]
   },
   "exclude": ["node_modules", "public", "**/dist/**", ".vitepress/cache"],
-  "include": ["**/*.js", "**/*.ts", "**/*.vue", "**/*.md"],
+  "include": [
+    ".vitepress/**/*.js",
+    ".vitepress/**/*.vue",
+    ".vitepress/**/*.md",
+    "**/*.md"
+  ],
   "vueCompilerOptions": {
     "vitePressExtensions": [".md"]
   }
