--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@eox/layout": "^1.0.0",
     "@eox/map": "^2.1.0-dev.1",
     "@eox/storytelling": "^1.10.0",
+    "cesium": "^1.121.0",
     "chroma-js": "^3.2.0",
+    "olcs": "^2.18.0",
     "ol": "10.7.1-dev.1767511985622",
     "stac-js": "^0.1.2",
     "zarrita": "^0.5.4"
