--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@eox/jsonform": "^1.9.0",
     "@eox/layercontrol": "^1.4.0",
     "@eox/layout": "^1.0.0",
-    "@eox/map": "^2.1.0-dev.1",
+    "@eox/map": "^2.1.0",
     "@eox/storytelling": "^1.10.1",
     "@eox/timecontrol": "^2.1.1",
     "chroma-js": "^3.2.0",
-    "ol": "10.7.1-dev.1769880357980",
+    "ol": "10.8.0",
     "stac-js": "^0.1.9"
   },
   "devDependencies": {
