--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -27,8 +27,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -37,7 +35,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: npm ci --force
+        run: npm ci
       - name: Build with VitePress with correct base
         run: npm run build -- --base /pr-preview/pr-${{ github.event.number }}/
       - name: Deploy preview to Github Pages
