--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/chroma-js": "^3.1.2",
     "eslint-plugin-vue": "^10.7.0",
     "typescript": "^5.9.3",
+    "vitepress-plugin-llms": "^1.11.0",
     "vue-tsc": "^3.2.4"
   }
 }
