--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vitepress dev --port 8009",
+    "dev": "vitepress dev",
     "build": "vitepress build",
     "serve": "vitepress serve",
     "format": "npx prettier --write **/*.{js,css,json,vue}",
@@ -12,22 +12,24 @@
   "dependencies": {
     "@eodash/eodash": "https://pkg.pr.new/eodash/eodash/@eodash/eodash@6c7f5fd",
     "@eox/chart": "^1.1.0",
-    "@eox/elements-utils": "^1.1.0",
+    "@eox/drawtools": "^1.2.0",
+    "@eox/elements-utils": "^1.1.1",
     "@eox/itemfilter": "^1.14.0",
-    "@eox/jsonform": "^1.8.0",
+    "@eox/jsonform": "^1.9.0",
     "@eox/layercontrol": "^1.4.0",
     "@eox/layout": "^1.0.0",
-    "@eox/map": "^2.1.0-dev.1",
-    "@eox/storytelling": "^1.10.0",
+    "@eox/map": "^2.1.0",
+    "@eox/storytelling": "^1.10.1",
+    "@eox/timecontrol": "^2.1.1",
     "chroma-js": "^3.2.0",
-    "ol": "10.7.1-dev.1767511985622",
-    "stac-js": "^0.1.2",
-    "zarrita": "^0.5.4"
+    "ol": "10.8.0",
+    "stac-js": "^0.1.9"
   },
   "devDependencies": {
-    "@eox/pages-theme-eox": "^0.11.5",
-    "eslint-plugin-vue": "^10.6.2",
+    "@eox/pages-theme-eox": "^1.1.0",
+    "@types/chroma-js": "^3.1.2",
+    "eslint-plugin-vue": "^10.8.0",
     "typescript": "^5.9.3",
-    "vue-tsc": "^3.1.5"
+    "vue-tsc": "^3.2.4"
   }
 }
